--- a/excercise7/css/pages/home.css
+++ b/excercise7/css/pages/home.css
@@ -1,21 +1,70 @@
 .homepage{
-margin: 10px;
+margin: 20px;
 }
 
 h1{
-  width: 100%;
+ font-size: 30px;
 }
 .content{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-top: 40px;
 
 }
-
-.popular-news{
+.image{
+  width: 50%;
+  border-radius: 20px;
+  margin-right: 20px;
+}
+.popular-news-section{
   width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+.popular-news-container{
+  margin-bottom: 50px;
+  border-bottom:1px solid rgb(190, 190, 190) ;
+}
+.popular-news-container:last-child{
+  border-bottom: none;
+}
+.popular-news{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 50px;
+}
+.popular-news h3{
+  font-size: 15px;
+  margin: 10px 0;
+
+}
+.text-container{
+  display: flex;
+  flex-direction: column;
+}
+.date{
+  font-size: 12px;
+  color: rgb(97, 97, 97);
 }
 
 .categories{
 width: 20%;
+margin: 0 40px;
+text-align: center;
+}
+.categories h4{
+  font-size: 15px;
+}
+.categories ul li{
+  color: rgb(97, 97, 97);;
+  cursor: pointer;
+  font-size: 12px;
+  padding: 10px;
+  list-style: none;
+}
+button{
+  border: 1px solid ;
+  width: 100px;
+  border-radius: 10px;
 }
