--- a/excercise7/css/styles.css
+++ b/excercise7/css/styles.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   overflow: scroll;
   min-height: 100%;
 }
@@ -26,7 +27,7 @@ header {
   flex-direction: row;
   height: 100px;
 }
-header nav{
+header nav {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -57,7 +58,5 @@ footer {
   color: white;
   text-align: center;
   padding: 10px 0;
-  position: fixed;
-  bottom: 0;
   width: 100%;
 }
