--- a/excercise7/css/pages/home.css
+++ b/excercise7/css/pages/home.css
@@ -1,70 +1,65 @@
-.homepage{
-margin: 20px;
+.homepage {
+  margin: 20px;
 }
 
-h1{
- font-size: 30px;
+h1 {
+  font-size: 30px;
 }
-.content{
+.content {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   margin-top: 40px;
-
 }
-.image{
-  width: 50%;
+.image {
+  width: 341px;
+  height: 200px;
   border-radius: 20px;
   margin-right: 20px;
 }
-.popular-news-section{
+.popular-news-section {
   width: 80%;
   display: flex;
   flex-direction: column;
 }
-.popular-news-container{
+.popular-news-container {
   margin-bottom: 50px;
-  border-bottom:1px solid rgb(190, 190, 190) ;
+  border-bottom: 1px solid rgb(190, 190, 190);
 }
-.popular-news-container:last-child{
+.popular-news-container:last-child {
   border-bottom: none;
 }
-.popular-news{
+.popular-news {
   display: flex;
   flex-direction: row;
   margin-bottom: 50px;
 }
-.popular-news h3{
+.popular-news h3 {
   font-size: 15px;
   margin: 10px 0;
-
 }
-.text-container{
+.text-container {
   display: flex;
   flex-direction: column;
 }
-.date{
+.date {
   font-size: 12px;
   color: rgb(97, 97, 97);
 }
 
-.categories{
-width: 20%;
-margin: 0 40px;
-text-align: center;
+.categories {
+  width: 20%;
+  text-align: center;
 }
-.categories h4{
-  font-size: 15px;
-}
-.categories ul li{
-  color: rgb(97, 97, 97);;
+.categories ul li {
+  color: rgb(97, 97, 97);
   cursor: pointer;
   font-size: 12px;
   padding: 10px;
   list-style: none;
 }
-button{
-  border: 1px solid ;
+button {
+  border: 1px solid;
   width: 100px;
   border-radius: 10px;
 }
