--- a/excercise7/css/pages/news-list.css
+++ b/excercise7/css/pages/news-list.css
@@ -1,5 +1,22 @@
- .image{
-  display: flex;
-  width: 100%;
-  height: 100%;
+h1{
+  margin: 20px 20px 50px 20px;
+}
+.news-container{
+  margin: 20px;
+}
+
+.image{
+  width: 300px;
+  border-radius: 20px;
  }
+
+ .news-content{
+  display: flex;
+  gap: 20px;
+ }
+.news-list article{
+  margin-bottom: 50px;
+}
+.description{
+  font-size: 20px;
+}
