--- a/excercise7/css/pages/contact.css
+++ b/excercise7/css/pages/contact.css
@@ -1,10 +1,12 @@
 .form-container {
   width: 50%;
-  margin: 50px auto;
+  margin: 3.125rem auto;
 }
+
 .contact-us {
-  margin-top: 50px;
+  margin-top: 3.125rem;
 }
+
 .contact-us p {
   text-align: center;
 }
@@ -13,16 +15,58 @@
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin-top: 70px;
+  margin-top: 4.375rem;
   text-align: center;
+}
+
+.contacts ul {
+  padding: 0;
 }
 
 .contacts ul li {
   list-style: none;
 }
+
 .social-media {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  gap: 20px;
+  gap: 1.25rem;
+  padding: 0;
+  margin: 0;
+}
+
+@media (max-width: 1024px) {
+  .form-container {
+    width: 70%;
+  }
+
+  .connection-alts {
+    flex-direction: column;
+    margin-top: 2.5rem;
+  }
+
+  .social-media {
+    flex-direction: row;
+    gap: 1rem;
+    margin-bottom: 1rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .form-container {
+    width: 90%;
+    margin: 1rem auto;
+  }
+
+  .connection-alts {
+    flex-direction: column;
+    margin-top: 1.25rem;
+  }
+
+  .social-media {
+    flex-direction: row;
+    gap: 1.2rem;
+    margin-bottom: 1rem;
+  }
 }
