--- a/excercise7/css/pages/news-list.css
+++ b/excercise7/css/pages/news-list.css
@@ -1,22 +1,67 @@
-h1{
-  margin: 20px 20px 50px 20px;
-}
-.news-container{
-  margin: 20px;
+h1 {
+  margin: 1.25rem 1.25rem 3.125rem 1.25rem;
 }
 
-.image{
-  width: 300px;
-  border-radius: 20px;
- }
+.news-container {
+  margin: 1.25rem;
+}
 
- .news-content{
+.image {
+  width: 18.75rem;
+  border-radius: 1.25rem;
+}
+
+.news-content {
   display: flex;
-  gap: 20px;
- }
-.news-list article{
-  margin-bottom: 50px;
+  gap: 1.25rem;
 }
-.description{
-  font-size: 20px;
+
+.news-list article {
+  margin-bottom: 3.125rem;
+}
+
+.description {
+  font-size: 1.25rem;
+}
+
+@media (max-width: 1024px) {
+  h1 {
+    margin: 1rem;
+  }
+
+  .image {
+    width: 80%;
+  }
+
+  .news-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .news-list article {
+    margin-bottom: 2.5rem;
+  }
+
+  .description {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  h1 {
+    margin: 1rem;
+  }
+
+  .image {
+    width: 90%;
+  }
+
+  .news-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .description {
+    font-size: 1.75rem;
+  }
 }
