--- a/excercise7/css/styles.css
+++ b/excercise7/css/styles.css
@@ -2,9 +2,12 @@ html,
 body {
   overflow: scroll;
   min-height: 100%;
+  height: 100%;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -18,6 +21,9 @@ a {
 
 a:hover {
   color: #0056b3;
+}
+main {
+  flex-grow: 1;
 }
 
 header {
